<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Editer">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp"
            />

        <EditText
            android:id="@+id/txt_nom2"

            style="@style/txt_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/txt_nom" />

        <EditText
            android:id="@+id/txt_secteur2"
            style="@style/txt_style"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sc" />

        <EditText
            android:id="@+id/txt_nb_employe2"
            style="@style/txt_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nb" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/line1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btn_st"

            android:text="@string/edite" />

        <Button
            android:id="@+id/btn_supp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btn_st"
            android:text="@string/supp" />
    </LinearLayout>

</RelativeLayout>