<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="200dp">


        <Button
            android:id="@+id/btn_ajouter"
            style="@style/btnMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_aj" />

        <Button
            android:id="@+id/btn_edite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/btnMenu"
            android:text="@string/btn_e"
            />

        <Button
            android:id="@+id/btn_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/btnMenu"
            android:text="@string/btn_l"
            />
    </LinearLayout>
</LinearLayout>